@@ -48,12 +48,15 @@ import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.graalvm.nativeimage.ImageSingletons;
 import org.graalvm.nativeimage.hosted.Feature;
 import org.graalvm.nativeimage.impl.ImageSingletonsSupport;
 
+import com.oracle.graal.pointsto.meta.AnalysisElement;
 import com.oracle.graal.pointsto.meta.AnalysisField;
 import com.oracle.graal.pointsto.meta.AnalysisMethod;
 import com.oracle.graal.pointsto.meta.AnalysisType;
@@ -71,17 +74,18 @@ import com.oracle.svm.core.VM;
 import com.oracle.svm.core.heap.Heap;
 import com.oracle.svm.core.hub.ClassForNameSupport;
 import com.oracle.svm.core.jdk.Resources;
+import com.oracle.svm.core.layeredimagesingleton.FeatureSingleton;
+import com.oracle.svm.core.layeredimagesingleton.UnsavedSingleton;
+import com.oracle.svm.core.option.AccumulatingLocatableMultiOptionValue;
 import com.oracle.svm.core.option.HostedOptionKey;
 import com.oracle.svm.core.option.HostedOptionValues;
-import com.oracle.svm.core.option.LocatableMultiOptionValue;
 import com.oracle.svm.core.option.OptionMigrationMessage;
 import com.oracle.svm.core.option.OptionOrigin;
 import com.oracle.svm.core.option.OptionUtils;
 import com.oracle.svm.core.option.RuntimeOptionKey;
 import com.oracle.svm.core.option.SubstrateOptionsParser;
-import com.oracle.svm.core.util.UserError;
+import com.oracle.svm.core.util.TimeUtils;
 import com.oracle.svm.core.util.VMError;
-import com.oracle.svm.core.util.json.JsonWriter;
 import com.oracle.svm.hosted.ProgressReporterFeature.UserRecommendation;
 import com.oracle.svm.hosted.ProgressReporterJsonHelper.AnalysisResults;
 import com.oracle.svm.hosted.ProgressReporterJsonHelper.GeneralInfo;
@@ -90,26 +94,27 @@ import com.oracle.svm.hosted.ProgressReporterJsonHelper.JsonMetric;
 import com.oracle.svm.hosted.ProgressReporterJsonHelper.ResourceUsageKey;
 import com.oracle.svm.hosted.c.codegen.CCompilerInvoker;
 import com.oracle.svm.hosted.image.AbstractImage.NativeImageKind;
+import com.oracle.svm.hosted.image.NativeImageDebugInfoStripFeature;
 import com.oracle.svm.hosted.reflect.ReflectionHostedSupport;
 import com.oracle.svm.hosted.util.CPUType;
 import com.oracle.svm.hosted.util.DiagnosticUtils;
-import com.oracle.svm.hosted.util.JDKArgsUtils;
 import com.oracle.svm.hosted.util.VMErrorReporter;
 import com.oracle.svm.util.ImageBuildStatistics;
+import com.sun.management.OperatingSystemMXBean;
 
 import jdk.graal.compiler.options.OptionDescriptor;
 import jdk.graal.compiler.options.OptionKey;
 import jdk.graal.compiler.options.OptionStability;
 import jdk.graal.compiler.options.OptionValues;
+import jdk.graal.compiler.util.json.JsonWriter;
 
-public class ProgressReporter {
-    private static final boolean IS_CI = SubstrateUtil.isRunningInCI();
+public class ProgressReporter implements FeatureSingleton, UnsavedSingleton {
     private static final int CHARACTERS_PER_LINE;
     private static final String HEADLINE_SEPARATOR;
     private static final String LINE_SEPARATOR;
     private static final int MAX_NUM_BREAKDOWN = 10;
     public static final String DOCS_BASE_URL = "https://github.com/oracle/graal/blob/master/docs/reference-manual/native-image/BuildOutput.md";
-    private static final double EXCESSIVE_GC_MIN_THRESHOLD_MILLIS = 15_000;
+    private static final double EXCESSIVE_GC_MIN_THRESHOLD_MILLIS = TimeUtils.secondsToMillis(15);
     private static final double EXCESSIVE_GC_RATIO = 0.5;
 
     private final NativeImageSystemIOWrappers builderIO;
@@ -122,7 +127,7 @@ public class ProgressReporter {
     private final LinkStrategy linkStrategy;
     private final ScheduledExecutorService executor = Executors.newSingleThreadScheduledExecutor();
 
-    private long lastGCCheckTimeMillis = System.currentTimeMillis();
+    private long lastGCCheckTimeNanos = System.nanoTime();
     private GCStats lastGCStats = GCStats.getCurrent();
     private long numRuntimeCompiledMethods = -1;
     private int numJNIClasses = -1;
@@ -165,7 +170,7 @@ public class ProgressReporter {
     }
 
     static {
-        CHARACTERS_PER_LINE = IS_CI ? ProgressReporterCHelper.MAX_CHARACTERS_PER_LINE : ProgressReporterCHelper.getTerminalWindowColumnsClamped();
+        CHARACTERS_PER_LINE = SubstrateUtil.isNonInteractiveTerminal() ? ProgressReporterCHelper.MAX_CHARACTERS_PER_LINE : ProgressReporterCHelper.getTerminalWindowColumnsClamped();
         HEADLINE_SEPARATOR = Utils.stringFilledWith(CHARACTERS_PER_LINE, "=");
         LINE_SEPARATOR = Utils.stringFilledWith(CHARACTERS_PER_LINE, "-");
     }
@@ -205,10 +210,11 @@ public class ProgressReporter {
 
     public void printStart(String imageName, NativeImageKind imageKind) {
         l().printHeadlineSeparator();
-        recordJsonMetric(GeneralInfo.IMAGE_NAME, imageName);
+        String outputFilename = imageKind.getOutputFilename(imageName);
+        recordJsonMetric(GeneralInfo.NAME, outputFilename);
         String imageKindName = imageKind.name().toLowerCase(Locale.ROOT).replace('_', ' ');
         l().blueBold().link("GraalVM Native Image", "https://www.graalvm.org/native-image/").reset()
-                        .a(": Generating '").bold().a(imageName).reset().a("' (").doclink(imageKindName, "#glossary-imagekind").a(")...").println();
+                        .a(": Generating '").bold().a(outputFilename).reset().a("' (").doclink(imageKindName, "#glossary-imagekind").a(")...").println();
         l().printHeadlineSeparator();
         if (!linkStrategy.isTerminalSupported()) {
             l().a("For detailed information and explanations on the build output, visit:").println();
@@ -252,7 +258,6 @@ public class ProgressReporter {
 
         printFeatures(features);
         printExperimentalOptions(classLoader);
-        printEnvironmentVariableOptions();
         printResourceInfo();
     }
 
@@ -348,16 +353,16 @@ public class ProgressReporter {
                 /* Only check builder arguments, ignore options that were set as part of others. */
                 continue;
             }
-            String origins = "";
-            String migrationMessage = OptionUtils.getAnnotationsByType(descriptor, OptionMigrationMessage.class).stream().map(a -> a.value()).collect(Collectors.joining(". "));
+            String origins;
+            String migrationMessage = OptionUtils.getAnnotationsByType(descriptor, OptionMigrationMessage.class).stream().map(OptionMigrationMessage::value).collect(Collectors.joining(". "));
             String alternatives = "";
 
-            if (optionValue instanceof LocatableMultiOptionValue<?> lmov) {
-                if (lmov.getValuesWithOrigins().allMatch(o -> o.getRight().isStable())) {
+            if (optionValue instanceof AccumulatingLocatableMultiOptionValue<?> lmov) {
+                if (lmov.getValuesWithOrigins().allMatch(o -> o.origin().isStable())) {
                     continue;
                 } else {
-                    origins = lmov.getValuesWithOrigins().filter(p -> !isStableOrInternalOrigin(p.getRight())).map(p -> p.getRight().toString()).collect(Collectors.joining(", "));
-                    alternatives = lmov.getValuesWithOrigins().map(p -> SubstrateOptionsParser.commandArgument(option, p.getLeft().toString()))
+                    origins = lmov.getValuesWithOrigins().filter(p -> !isStableOrInternalOrigin(p.origin())).map(p -> p.origin().toString()).distinct().collect(Collectors.joining(", "));
+                    alternatives = lmov.getValuesWithOrigins().map(p -> SubstrateOptionsParser.commandArgument(option, p.value().toString()))
                                     .filter(c -> !c.startsWith(CommonOptionParser.HOSTED_OPTION_PREFIX))
                                     .collect(Collectors.joining(", "));
                 }
@@ -401,17 +406,6 @@ public class ProgressReporter {
         return origin.isStable() || origin.isInternal();
     }
 
-    private void printEnvironmentVariableOptions() {
-        String envVarValue = SubstrateOptions.BuildOutputNativeImageOptionsEnvVarValue.getValue();
-        if (envVarValue != null && !envVarValue.isEmpty()) {
-            l().printLineSeparator();
-            l().yellowBold().a(" ").doclink("Picked up " + SubstrateOptions.NATIVE_IMAGE_OPTIONS_ENV_VAR, "#glossary-picked-up-ni-options").reset().a(":").println();
-            for (String arg : JDKArgsUtils.parseArgsFromEnvVar(envVarValue, SubstrateOptions.NATIVE_IMAGE_OPTIONS_ENV_VAR, msg -> UserError.abort(msg))) {
-                l().a(" - '%s'", arg).println();
-            }
-        }
-    }
-
     private void printResourceInfo() {
         Runtime runtime = Runtime.getRuntime();
         long maxMemory = runtime.maxMemory();
@@ -420,14 +414,16 @@ public class ProgressReporter {
         recordJsonMetric(ResourceUsageKey.MEMORY_TOTAL, totalMemorySize);
 
         List<String> inputArguments = ManagementFactory.getRuntimeMXBean().getInputArguments();
-        List<String> maxRAMPrecentageValues = inputArguments.stream().filter(arg -> arg.startsWith("-XX:MaxRAMPercentage")).toList();
-        String maxHeapSuffix = "determined at start";
-        if (maxRAMPrecentageValues.size() > 1) { // The driver sets this option once
-            maxHeapSuffix = "set via '%s'".formatted(maxRAMPrecentageValues.get(maxRAMPrecentageValues.size() - 1));
+        List<String> maxRAMPercentageValues = inputArguments.stream().filter(arg -> arg.startsWith("-XX:MaxRAMPercentage=") || arg.startsWith("-XX:MaximumHeapSizePercent=")).toList();
+        String memoryUsageReason = "unknown";
+        if (maxRAMPercentageValues.size() == 1) { // The driver sets one of these options once
+            memoryUsageReason = System.getProperty(SubstrateOptions.BUILD_MEMORY_USAGE_REASON_TEXT_PROPERTY, "unknown");
+        } else if (maxRAMPercentageValues.size() > 1) {
+            memoryUsageReason = "set via '%s'".formatted(maxRAMPercentageValues.getLast());
         }
         String xmxValueOrNull = inputArguments.stream().filter(arg -> arg.startsWith("-Xmx")).reduce((first, second) -> second).orElse(null);
         if (xmxValueOrNull != null) { // -Xmx takes precedence over -XX:MaxRAMPercentage
-            maxHeapSuffix = "set via '%s'".formatted(xmxValueOrNull);
+            memoryUsageReason = "set via '%s'".formatted(xmxValueOrNull);
         }
 
         int maxNumberOfThreads = NativeImageOptions.getActualNumberOfThreads();
@@ -441,8 +437,7 @@ public class ProgressReporter {
 
         l().printLineSeparator();
         l().yellowBold().doclink("Build resources", "#glossary-build-resources").a(":").reset().println();
-        l().a(" - %.2fGB of memory (%.1f%% of %.2fGB system memory, %s)",
-                        ByteFormattingUtil.bytesToGiB(maxMemory), Utils.toPercentage(maxMemory, totalMemorySize), ByteFormattingUtil.bytesToGiB(totalMemorySize), maxHeapSuffix).println();
+        l().a(" - %s of memory (%.1f%% of system memory, %s)", ByteFormattingUtil.bytesToHuman(maxMemory), Utils.toPercentage(maxMemory, totalMemorySize), memoryUsageReason).println();
         l().a(" - %s thread(s) (%.1f%% of %s available processor(s), %s)",
                         maxNumberOfThreads, Utils.toPercentage(maxNumberOfThreads, availableProcessors), availableProcessors, maxNumberOfThreadsSuffix).println();
     }
@@ -472,49 +467,34 @@ public class ProgressReporter {
     }
 
     private void printAnalysisStatistics(AnalysisUniverse universe, Collection<String> libraries) {
-        String actualFormat = "%,9d ";
-        String totalFormat = " (%4.1f%% of %,8d total)";
-        long reachableTypes = universe.getTypes().stream().filter(AnalysisType::isReachable).count();
+        String typesFieldsMethodFormat = "%,9d types, %,7d fields, and %,7d methods ";
+        long reachableTypes = reportedReachableTypes(universe).size();
         long totalTypes = universe.getTypes().size();
-        recordJsonMetric(AnalysisResults.TYPES_TOTAL, totalTypes);
-        recordJsonMetric(AnalysisResults.DEPRECATED_CLASS_TOTAL, totalTypes);
+        recordJsonMetric(AnalysisResults.DEPRECATED_TYPES_TOTAL, totalTypes);
         recordJsonMetric(AnalysisResults.TYPES_REACHABLE, reachableTypes);
-        recordJsonMetric(AnalysisResults.DEPRECATED_CLASS_REACHABLE, reachableTypes);
-        l().a(actualFormat, reachableTypes).doclink("reachable types", "#glossary-reachability").a("  ")
-                        .a(totalFormat, Utils.toPercentage(reachableTypes, totalTypes), totalTypes).println();
         Collection<AnalysisField> fields = universe.getFields();
-        long reachableFields = fields.stream().filter(AnalysisField::isAccessed).count();
+        long reachableFields = reportedReachableFields(universe).size();
         int totalFields = fields.size();
-        recordJsonMetric(AnalysisResults.FIELD_TOTAL, totalFields);
+        recordJsonMetric(AnalysisResults.DEPRECATED_FIELD_TOTAL, totalFields);
         recordJsonMetric(AnalysisResults.FIELD_REACHABLE, reachableFields);
-        l().a(actualFormat, reachableFields).doclink("reachable fields", "#glossary-reachability").a(" ")
-                        .a(totalFormat, Utils.toPercentage(reachableFields, totalFields), totalFields).println();
         Collection<AnalysisMethod> methods = universe.getMethods();
-        long reachableMethods = methods.stream().filter(AnalysisMethod::isReachable).count();
+        long reachableMethods = reportedReachableMethods(universe).size();
         int totalMethods = methods.size();
-        recordJsonMetric(AnalysisResults.METHOD_TOTAL, totalMethods);
+        recordJsonMetric(AnalysisResults.DEPRECATED_METHOD_TOTAL, totalMethods);
         recordJsonMetric(AnalysisResults.METHOD_REACHABLE, reachableMethods);
-        l().a(actualFormat, reachableMethods).doclink("reachable methods", "#glossary-reachability")
-                        .a(totalFormat, Utils.toPercentage(reachableMethods, totalMethods), totalMethods).println();
-        if (numRuntimeCompiledMethods >= 0) {
-            recordJsonMetric(ImageDetailKey.RUNTIME_COMPILED_METHODS_COUNT, numRuntimeCompiledMethods);
-            l().a(actualFormat, numRuntimeCompiledMethods).doclink("runtime compiled methods", "#glossary-runtime-methods")
-                            .a(totalFormat, Utils.toPercentage(numRuntimeCompiledMethods, totalMethods), totalMethods).println();
-        }
-        String typesFieldsMethodFormat = "%,9d types, %,5d fields, and %,5d methods ";
-        int reflectClassesCount = ClassForNameSupport.count();
+        l().a(typesFieldsMethodFormat, reachableTypes, reachableFields, reachableMethods)
+                        .doclink("found reachable", "#glossary-reachability").println();
+        int reflectClassesCount = ClassForNameSupport.currentLayer().count();
         ReflectionHostedSupport rs = ImageSingletons.lookup(ReflectionHostedSupport.class);
         int reflectFieldsCount = rs.getReflectionFieldsCount();
         int reflectMethodsCount = rs.getReflectionMethodsCount();
         recordJsonMetric(AnalysisResults.METHOD_REFLECT, reflectMethodsCount);
         recordJsonMetric(AnalysisResults.TYPES_REFLECT, reflectClassesCount);
-        recordJsonMetric(AnalysisResults.DEPRECATED_CLASS_REFLECT, reflectClassesCount);
         recordJsonMetric(AnalysisResults.FIELD_REFLECT, reflectFieldsCount);
         l().a(typesFieldsMethodFormat, reflectClassesCount, reflectFieldsCount, reflectMethodsCount)
                         .doclink("registered for reflection", "#glossary-reflection-registrations").println();
         recordJsonMetric(AnalysisResults.METHOD_JNI, (numJNIMethods >= 0 ? numJNIMethods : UNAVAILABLE_METRIC));
         recordJsonMetric(AnalysisResults.TYPES_JNI, (numJNIClasses >= 0 ? numJNIClasses : UNAVAILABLE_METRIC));
-        recordJsonMetric(AnalysisResults.DEPRECATED_CLASS_JNI, (numJNIClasses >= 0 ? numJNIClasses : UNAVAILABLE_METRIC));
         recordJsonMetric(AnalysisResults.FIELD_JNI, (numJNIFields >= 0 ? numJNIFields : UNAVAILABLE_METRIC));
         if (numJNIClasses >= 0) {
             l().a(typesFieldsMethodFormat, numJNIClasses, numJNIFields, numJNIMethods)
@@ -532,6 +512,28 @@ public class ProgressReporter {
             TreeSet<String> sortedLibraries = new TreeSet<>(libraries);
             l().a("%,9d native %s: ", numLibraries, numLibraries == 1 ? "library" : "libraries").a(String.join(", ", sortedLibraries)).println();
         }
+        if (numRuntimeCompiledMethods >= 0) {
+            recordJsonMetric(ImageDetailKey.RUNTIME_COMPILED_METHODS_COUNT, numRuntimeCompiledMethods);
+            l().a("%,9d ", numRuntimeCompiledMethods).doclink("runtime compiled methods", "#glossary-runtime-methods")
+                            .a(" (%.1f%% of all reachable methods)", Utils.toPercentage(numRuntimeCompiledMethods, reachableMethods), reachableMethods).println();
+        }
+    }
+
+    public static List<AnalysisType> reportedReachableTypes(AnalysisUniverse universe) {
+        return reportedElements(universe, universe.getTypes(), AnalysisType::isReachable, t -> !t.isInBaseLayer());
+    }
+
+    public static List<AnalysisField> reportedReachableFields(AnalysisUniverse universe) {
+        return reportedElements(universe, universe.getFields(), AnalysisField::isAccessed, f -> !f.isInBaseLayer());
+    }
+
+    public static List<AnalysisMethod> reportedReachableMethods(AnalysisUniverse universe) {
+        return reportedElements(universe, universe.getMethods(), AnalysisMethod::isReachable, m -> !m.isInBaseLayer());
+    }
+
+    private static <T extends AnalysisElement> List<T> reportedElements(AnalysisUniverse universe, Collection<T> elements, Predicate<T> elementsFilter, Predicate<T> baseLayerFilter) {
+        Stream<T> reachableElements = elements.stream().filter(elementsFilter);
+        return universe.hostVM().useBaseLayer() ? reachableElements.filter(baseLayerFilter).toList() : reachableElements.toList();
     }
 
     public ReporterClosable printUniverse() {
@@ -563,19 +565,21 @@ public class ProgressReporter {
         this.debugInfoTimer = timer;
     }
 
-    public void printCreationEnd(int imageFileSize, int heapObjectCount, long imageHeapSize, int codeAreaSize, int numCompilations, int debugInfoSize) {
+    public void printCreationEnd(int imageFileSize, int heapObjectCount, long imageHeapSize, int codeAreaSize, int numCompilations, int debugInfoSize, int imageDiskFileSize) {
         recordJsonMetric(ImageDetailKey.IMAGE_HEAP_OBJECT_COUNT, heapObjectCount);
         Timer imageTimer = getTimer(TimerCollection.Registry.IMAGE);
         Timer writeTimer = getTimer(TimerCollection.Registry.WRITE);
-        stagePrinter.end(imageTimer.getTotalTime() + writeTimer.getTotalTime());
+        Timer archiveTimer = getTimer(TimerCollection.Registry.ARCHIVE_LAYER);
+        stagePrinter.end(imageTimer.getTotalTime() + writeTimer.getTotalTime() + archiveTimer.getTotalTime());
         creationStageEndCompleted = true;
         String format = "%9s (%5.2f%%) for ";
         l().a(format, ByteFormattingUtil.bytesToHuman(codeAreaSize), Utils.toPercentage(codeAreaSize, imageFileSize))
                         .doclink("code area", "#glossary-code-area").a(":%,10d compilation units", numCompilations).println();
-        int numResources = Resources.singleton().count();
+        int numResources = Resources.currentLayer().count();
         recordJsonMetric(ImageDetailKey.IMAGE_HEAP_RESOURCE_COUNT, numResources);
         l().a(format, ByteFormattingUtil.bytesToHuman(imageHeapSize), Utils.toPercentage(imageHeapSize, imageFileSize))
                         .doclink("image heap", "#glossary-image-heap").a(":%,9d objects and %,d resources", heapObjectCount, numResources).println();
+        long otherBytes = imageFileSize - codeAreaSize - imageHeapSize;
         if (debugInfoSize > 0) {
             recordJsonMetric(ImageDetailKey.DEBUG_INFO_SIZE, debugInfoSize); // Optional metric
             DirectPrinter l = l().a(format, ByteFormattingUtil.bytesToHuman(debugInfoSize), Utils.toPercentage(debugInfoSize, imageFileSize))
@@ -585,15 +589,23 @@ public class ProgressReporter {
                 l.a(" generated in %.1fs", Utils.millisToSeconds(debugInfoTimer.getTotalTime()));
             }
             l.println();
+            if (!(ImageSingletons.contains(NativeImageDebugInfoStripFeature.class) && ImageSingletons.lookup(NativeImageDebugInfoStripFeature.class).hasStrippedSuccessfully())) {
+                // Only subtract if debug info is embedded in file (not stripped).
+                otherBytes -= debugInfoSize;
+            }
         }
-        long otherBytes = imageFileSize - codeAreaSize - imageHeapSize - debugInfoSize;
+        assert otherBytes >= 0 : "Other bytes should never be negative: " + otherBytes;
         recordJsonMetric(ImageDetailKey.IMAGE_HEAP_SIZE, imageHeapSize);
         recordJsonMetric(ImageDetailKey.TOTAL_SIZE, imageFileSize);
         recordJsonMetric(ImageDetailKey.CODE_AREA_SIZE, codeAreaSize);
         recordJsonMetric(ImageDetailKey.NUM_COMP_UNITS, numCompilations);
         l().a(format, ByteFormattingUtil.bytesToHuman(otherBytes), Utils.toPercentage(otherBytes, imageFileSize))
                         .doclink("other data", "#glossary-other-data").println();
-        l().a("%9s in total", ByteFormattingUtil.bytesToHuman(imageFileSize)).println();
+        l().a("%9s in total image size", ByteFormattingUtil.bytesToHuman(imageFileSize));
+        if (imageDiskFileSize >= 0) {
+            l().a(", %s in total file size", ByteFormattingUtil.bytesToHuman(imageDiskFileSize));
+        }
+        l().println();
         printBreakdowns();
         ImageSingletons.lookup(ProgressReporterFeature.class).afterBreakdowns();
         printRecommendations();
@@ -610,7 +622,7 @@ public class ProgressReporter {
             return;
         }
         l().printLineSeparator();
-        Map<String, Long> codeBreakdown = CodeBreakdownProvider.get();
+        Map<String, Long> codeBreakdown = CodeBreakdownProvider.getAndClear();
         Iterator<Entry<String, Long>> packagesBySize = codeBreakdown.entrySet().stream()
                         .sorted(Entry.comparingByValue(Comparator.reverseOrder())).iterator();
 
@@ -682,22 +694,25 @@ public class ProgressReporter {
         }
     }
 
-    public void printEpilog(Optional<String> optionalImageName, Optional<NativeImageGenerator> optionalGenerator, ImageClassLoader classLoader, boolean wasSuccessfulBuild,
+    public void printEpilog(Optional<String> optionalImageName, Optional<NativeImageGenerator> optionalGenerator, ImageClassLoader classLoader, NativeImageGeneratorRunner.BuildOutcome buildOutcome,
                     Optional<Throwable> optionalUnhandledThrowable, OptionValues parsedHostedOptions) {
         executor.shutdown();
 
+        boolean singletonSupportAvailable = ImageSingletonsSupport.isInstalled() && ImageSingletons.contains(BuildArtifacts.class) && ImageSingletons.contains(TimerCollection.class);
         if (optionalUnhandledThrowable.isPresent()) {
             Path errorReportPath = NativeImageOptions.getErrorFilePath(parsedHostedOptions);
             Optional<FeatureHandler> featureHandler = optionalGenerator.map(nativeImageGenerator -> nativeImageGenerator.featureHandler);
             ReportUtils.report("GraalVM Native Image Error Report", errorReportPath,
                             p -> VMErrorReporter.generateErrorReport(p, buildOutputLog, classLoader, featureHandler, optionalUnhandledThrowable.get()),
                             false);
-            if (ImageSingletonsSupport.isInstalled()) {
-                BuildArtifacts.singleton().add(ArtifactType.BUILD_INFO, errorReportPath);
+            if (!singletonSupportAvailable) {
+                printErrorMessage(optionalUnhandledThrowable, parsedHostedOptions);
+                return;
             }
+            BuildArtifacts.singleton().add(ArtifactType.BUILD_INFO, errorReportPath);
         }
 
-        if (optionalImageName.isEmpty() || optionalGenerator.isEmpty()) {
+        if (!singletonSupportAvailable || optionalImageName.isEmpty() || optionalGenerator.isEmpty()) {
             printErrorMessage(optionalUnhandledThrowable, parsedHostedOptions);
             return;
         }
@@ -710,8 +725,8 @@ public class ProgressReporter {
         double totalSeconds = Utils.millisToSeconds(getTimer(TimerCollection.Registry.TOTAL).getTotalTime());
         recordJsonMetric(ResourceUsageKey.TOTAL_SECS, totalSeconds);
 
-        createAdditionalArtifacts(imageName, generator, wasSuccessfulBuild, parsedHostedOptions);
-        printArtifacts(generator.getBuildArtifacts());
+        createAdditionalArtifacts(imageName, generator, buildOutcome.successful(), parsedHostedOptions);
+        printArtifacts(BuildArtifacts.singleton());
 
         l().printHeadlineSeparator();
 
@@ -721,10 +736,18 @@ public class ProgressReporter {
         } else {
             timeStats = String.format("%dm %ds", (int) totalSeconds / 60, (int) totalSeconds % 60);
         }
-        l().a(wasSuccessfulBuild ? "Finished" : "Failed").a(" generating '").bold().a(imageName).reset().a("' ")
-                        .a(wasSuccessfulBuild ? "in" : "after").a(" ").a(timeStats).a(".").println();
+        l().a(outcomePrefix(buildOutcome)).a(" generating '").bold().a(imageName).reset().a("' ")
+                        .a(buildOutcome.successful() ? "in" : "after").a(" ").a(timeStats).a(".").println();
 
         printErrorMessage(optionalUnhandledThrowable, parsedHostedOptions);
+    }
+
+    private static String outcomePrefix(NativeImageGeneratorRunner.BuildOutcome buildOutcome) {
+        return switch (buildOutcome) {
+            case SUCCESSFUL -> "Finished";
+            case FAILED -> "Failed";
+            case STOPPED -> "Stopped";
+        };
     }
 
     private void printErrorMessage(Optional<Throwable> optionalUnhandledThrowable, OptionValues parsedHostedOptions) {
@@ -756,21 +779,19 @@ public class ProgressReporter {
         if (wasSuccessfulBuild) {
             createAdditionalArtifactsOnSuccess(artifacts, generator, parsedHostedOptions);
         }
-        BuildArtifactsExporter.run(imageName, artifacts, generator.getBuildArtifacts());
+        BuildArtifactsExporter.run(imageName, artifacts);
     }
 
     private void createAdditionalArtifactsOnSuccess(BuildArtifacts artifacts, NativeImageGenerator generator, OptionValues parsedHostedOptions) {
         Optional<Path> buildOutputJSONFile = SubstrateOptions.BuildOutputJSONFile.getValue(parsedHostedOptions).lastValue();
-        if (buildOutputJSONFile.isPresent()) {
-            artifacts.add(ArtifactType.BUILD_INFO, reportBuildOutput(buildOutputJSONFile.get()));
-        }
+        buildOutputJSONFile.ifPresent(path -> artifacts.add(ArtifactType.BUILD_INFO, reportBuildOutput(path)));
         if (generator.getBigbang() != null && ImageBuildStatistics.Options.CollectImageBuildStatistics.getValue(parsedHostedOptions)) {
             artifacts.add(ArtifactType.BUILD_INFO, reportImageBuildStatistics());
         }
         ImageSingletons.lookup(ProgressReporterFeature.class).createAdditionalArtifactsOnSuccess(artifacts);
     }
 
-    private void printArtifacts(Map<ArtifactType, List<Path>> artifacts) {
+    private void printArtifacts(BuildArtifacts artifacts) {
         if (artifacts.isEmpty()) {
             return;
         }
@@ -804,7 +825,7 @@ public class ProgressReporter {
     }
 
     private void printResourceStatistics() {
-        double totalProcessTimeSeconds = Utils.millisToSeconds(System.currentTimeMillis() - ManagementFactory.getRuntimeMXBean().getStartTime());
+        double totalProcessTimeSeconds = Utils.millisToSeconds(ManagementFactory.getRuntimeMXBean().getUptime());
         GCStats gcStats = GCStats.getCurrent();
         double gcSeconds = Utils.millisToSeconds(gcStats.totalTimeMillis);
         recordJsonMetric(ResourceUsageKey.GC_COUNT, gcStats.totalCount);
@@ -814,7 +835,7 @@ public class ProgressReporter {
                         .doclink("GCs", "#glossary-garbage-collections");
         long peakRSS = ProgressReporterCHelper.getPeakRSS();
         if (peakRSS >= 0) {
-            p.a(" | ").doclink("Peak RSS", "#glossary-peak-rss").a(": ").a("%.2fGB", ByteFormattingUtil.bytesToGiB(peakRSS));
+            p.a(" | ").doclink("Peak RSS", "#glossary-peak-rss").a(": ").a(ByteFormattingUtil.bytesToHuman(peakRSS));
         }
         recordJsonMetric(ResourceUsageKey.PEAK_RSS, (peakRSS >= 0 ? peakRSS : UNAVAILABLE_METRIC));
         long processCPUTime = getOperatingSystemMXBean().getProcessCpuTime();
@@ -828,9 +849,9 @@ public class ProgressReporter {
     }
 
     private void checkForExcessiveGarbageCollection() {
-        long current = System.currentTimeMillis();
-        long timeDeltaMillis = current - lastGCCheckTimeMillis;
-        lastGCCheckTimeMillis = current;
+        long nowNanos = System.nanoTime();
+        long timeDeltaMillis = TimeUtils.millisSinceNanos(nowNanos, lastGCCheckTimeNanos);
+        lastGCCheckTimeNanos = nowNanos;
         GCStats currentGCStats = GCStats.getCurrent();
         long gcTimeDeltaMillis = currentGCStats.totalTimeMillis - lastGCStats.totalTimeMillis;
         double ratio = gcTimeDeltaMillis / (double) timeDeltaMillis;
@@ -839,10 +860,24 @@ public class ProgressReporter {
                             .a(": %.1fs spent in %d GCs during the last stage, taking up %.2f%% of the time.",
                                             Utils.millisToSeconds(gcTimeDeltaMillis), currentGCStats.totalCount - lastGCStats.totalCount, ratio * 100)
                             .println();
-            l().a("            Please ensure more than %.2fGB of memory is available for Native Image", ByteFormattingUtil.bytesToGiB(ProgressReporterCHelper.getPeakRSS())).println();
+            l().a("            Please ensure more than %s of memory is available for Native Image", ByteFormattingUtil.bytesToHuman(ProgressReporterCHelper.getPeakRSS())).println();
             l().a("            to reduce GC overhead and improve image build time.").println();
         }
         lastGCStats = currentGCStats;
+    }
+
+    public Object getJsonMetricValue(JsonMetric metric) {
+        if (jsonHelper == null) {
+            return null;
+        }
+        return metric.getValue(jsonHelper);
+    }
+
+    public boolean containsJsonMetricValue(JsonMetric metric) {
+        if (jsonHelper == null) {
+            return false;
+        }
+        return metric.containsValue(jsonHelper);
     }
 
     public void recordJsonMetric(JsonMetric metric, Object value) {
@@ -859,11 +894,11 @@ public class ProgressReporter {
         return TimerCollection.singleton().get(type);
     }
 
-    private static com.sun.management.OperatingSystemMXBean getOperatingSystemMXBean() {
-        return (com.sun.management.OperatingSystemMXBean) ManagementFactory.getOperatingSystemMXBean();
+    private static OperatingSystemMXBean getOperatingSystemMXBean() {
+        return (OperatingSystemMXBean) ManagementFactory.getOperatingSystemMXBean();
     }
 
-    private static class Utils {
+    private static final class Utils {
         private static final double MILLIS_TO_SECONDS = 1000d;
         private static final double NANOS_TO_SECONDS = 1000d * 1000d * 1000d;
 
@@ -875,8 +910,8 @@ public class ProgressReporter {
             return nanos / NANOS_TO_SECONDS;
         }
 
-        private static double getUsedMemory() {
-            return ByteFormattingUtil.bytesToGiB(Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory());
+        private static String getUsedMemory() {
+            return ByteFormattingUtil.bytesToHumanGB(Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory());
         }
 
         private static String stringFilledWith(int size, String fill) {
@@ -921,10 +956,7 @@ public class ProgressReporter {
         }
     }
 
-    private static class GCStats {
-        private final long totalCount;
-        private final long totalTimeMillis;
-
+    private record GCStats(long totalCount, long totalTimeMillis) {
         private static GCStats getCurrent() {
             long totalCount = 0;
             long totalTime = 0;
@@ -939,11 +971,6 @@ public class ProgressReporter {
                 }
             }
             return new GCStats(totalCount, totalTime);
-        }
-
-        GCStats(long totalCount, long totalTime) {
-            this.totalCount = totalCount;
-            this.totalTimeMillis = totalTime;
         }
     }
 
@@ -1205,7 +1232,7 @@ public class ProgressReporter {
                 a("]").reset();
             }
 
-            String suffix = String.format("(%.1fs @ %.2fGB)", Utils.millisToSeconds(totalTime), Utils.getUsedMemory());
+            String suffix = String.format("(%.1fs @ %s)", Utils.millisToSeconds(totalTime), Utils.getUsedMemory());
             int textLength = getCurrentTextLength();
             // TODO: `assert textLength > 0;` should be used here but tests do not start stages
             // properly (GR-35721)
